<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="atmempresaconsultoria.adeilson.com.br.atmempresaconsultoria.ServicosActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_processos"
        tools:layout_editor_absoluteX="49dp"
        tools:layout_editor_absoluteY="174dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_acompanhamento"
        tools:layout_editor_absoluteX="49dp"
        tools:layout_editor_absoluteY="215dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/detalhe_servico"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="28dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detalhe_servico"
        tools:layout_editor_absoluteX="120dp"
        tools:layout_editor_absoluteY="58dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_consultoria"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="132dp" />
</android.support.constraint.ConstraintLayout>
